--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - PORT=80
       - SECURE_PORT=443
       - NODE_ENV=production
+      - TEMP_DIR=/tmp
       - DEBUG=
     depends_on:
       - mongo
